# src

./: AST.h  CMakeLists.txt  code.txt  interpreter.cpp  interpreter.h  interpreterA  lexer.cpp  lexer.h  main.cpp  parser.cpp
include/: AST.h  interpreter.h  lexer.h  parser.h
src/: interpreter.cpp  lexer.cpp  main.cpp  parser.cpp
